collapse menu text color fixed

--- a/app/assets/stylesheets/bootstrap_overrides.scss
+++ b/app/assets/stylesheets/bootstrap_overrides.scss
@@ -41,8 +41,10 @@ a.dropdown-toggle {
 	}
 }
 
-.navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
-	color: white;
+@media screen and (max-width: 767px) {
+	.navbar-collapse .navbar-nav .open .dropdown-menu > li > a {
+		color: white;
+	}
 }
 
 .navbar-inverse .navbar-toggle {
